{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 43,
  "lineage": "68219bf4-908a-4eac-38c0-06f26cce7bd5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:internet-gateway/igw-0f7c539543fffbff6",
            "id": "igw-0f7c539543fffbff6",
            "owner_id": "661495146618",
            "tags": {
              "Name": "Internet Gateway Main"
            },
            "tags_all": {
              "Name": "Internet Gateway Main"
            },
            "vpc_id": "vpc-0cee858b9b0226e99"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:route-table/rtb-07518b193b896a439",
            "id": "rtb-07518b193b896a439",
            "owner_id": "661495146618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7c539543fffbff6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table main"
            },
            "tags_all": {
              "Name": "Route Table main"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cee858b9b0226e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d4cb7306c40e99c",
            "route_table_id": "rtb-07518b193b896a439",
            "subnet_id": "subnet-07b11a0a001705388"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b27868fb512bf0e7",
            "route_table_id": "rtb-07518b193b896a439",
            "subnet_id": "subnet-030a316a3651be939"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet2",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fca07a865aa63f0",
            "route_table_id": "rtb-07518b193b896a439",
            "subnet_id": "subnet-025f9aa0414bae7d1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet3",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:security-group/sg-091b159dc00ef5f60",
            "description": "Permitir ping y SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091b159dc00ef5f60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permitir servicio ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permitir servicio ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_ping_ssh",
            "name_prefix": "",
            "owner_id": "661495146618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_ping"
            },
            "tags_all": {
              "Name": "allow_ssh_ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cee858b9b0226e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:security-group/sg-0a2b1bb22e49b39b0",
            "description": "Permitir HTTP",
            "egress": [],
            "id": "sg-0a2b1bb22e49b39b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permitir servicio http",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "permitir servicio http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_HTTP_Permit",
            "name_prefix": "",
            "owner_id": "661495146618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Acceso HTTP"
            },
            "tags_all": {
              "Name": "Acceso HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cee858b9b0226e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:subnet/subnet-07b11a0a001705388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b11a0a001705388",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "661495146618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet 1 en eu-west-1a main1"
            },
            "tags_all": {
              "Name": "subnet 1 en eu-west-1a main1"
            },
            "vpc_id": "vpc-0cee858b9b0226e99"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:subnet/subnet-030a316a3651be939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a316a3651be939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "661495146618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet 1 en eu-west-1b main1"
            },
            "tags_all": {
              "Name": "subnet 1 en eu-west-1b main1"
            },
            "vpc_id": "vpc-0cee858b9b0226e99"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:subnet/subnet-025f9aa0414bae7d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025f9aa0414bae7d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "661495146618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet 1 en eu-west-1c main1"
            },
            "tags_all": {
              "Name": "subnet 1 en eu-west-1c main1"
            },
            "vpc_id": "vpc-0cee858b9b0226e99"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:661495146618:vpc/vpc-0cee858b9b0226e99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc7b5a839f7208a5",
            "default_route_table_id": "rtb-069f2409879c6c50b",
            "default_security_group_id": "sg-01950b0d1d2d093a8",
            "dhcp_options_id": "dopt-a50d3ec3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cee858b9b0226e99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069f2409879c6c50b",
            "owner_id": "661495146618",
            "tags": {
              "Name": "main VPC 1"
            },
            "tags_all": {
              "Name": "main VPC 1"
            }
          }
        }
      ]
    }
  ]
}